workshop03/myapp.yaml
---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: myapp-deploy
  namespace: myns
  labels:
    app: myapp-deploy
    version: v1

spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp-pod
      version: v1
  template:
    metadata:
      name: myapp-pod
      labels: 
        app: myapp-pod
        version: v1
    spec:
      containers:
      - name: myapp
        image: stackupiss/northwind-app:v1
        imagePullPolicy: Always
        ports:
        - name: myapp-port
          containerPort: 3000

---
#FQDN -> mydb-svc.myns.svc.cluster.local
kind: Service
apiVersion: v1

metadata:
  name: myapp-svc
  namespace: myns
  labels:
    app: myapp

spec:
  type: LoadBalancer
  selector: 
    app: myapp-pod
  ports:
  - name: myapp-svc-port
    port: 80
    targetPort: myapp-port
