workshop03/my-ing.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata:
  name: myapp-ing
  namespace: myns
  labels:
    name: myapp-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # use here
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  backend:
    serviceName: fortune-svc
    servicePort: 80
  rules:
  - http: 
      paths:
      - path: /customer(/|$)(.*) # replace /customer with /, $ => end of line : Capture for above
        backend:
          serviceName: myapp-svc
          servicePort: 80
      - path: / # replace /customer with /, $ => end of line : Capture for above
        backend:
          serviceName: fortune-svc
          servicePort: 80
  - host: myapp.com
    http: 
      paths:
      - path: /
        backend:
          serviceName: myapp-svc
          servicePort: 80
